# NEAR

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Pipfile  README.md  all_vs_all_sim.py  benchmark.py  brute_force.sh  cmds.sh  count_seqs.py  dvc.yaml  emit_array_job.sh  eval.sh  evaluate.sh  evaluate_results.ipynb  gen_emission_sequences.sh  get_hmmer_matches.sh  hist.py  hit_evaluation.py  hmmer_job.sh  hmmer_results.py  hparams.yaml  job.sh  label.sh  load_data.py  mask_test.py  meta.yaml  models.py  mv.py  near_eval_env.yml  plot_pdump.py  plot_perf.py  prefilter_evaluation.py  protein_filter.py  pyproject.toml  requirements-gpu.txt  requirements.txt  resnet.yaml  scratch.py  search_filter_values.sh  (+9 more)
data/: convert_domtblout_to_json.sh  create_json_labels_from_hmmer_output.py  create_labels_from_dir.sh  flatten_json.py  hmmerhits.py  make-labels-from-dir.sh  make_small_dataset.py  run-hmmer.sh  run_hmmer_on_cluster.sh  run_json_array_job.sh  split_test_set.py  summarize_dataset.py
models/: resnet_877_256.yaml
my_rust_module/: Cargo.toml  __init__.py  rust-toolchain
my_rust_module/my_rust_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
my_rust_module/src/: .lib.rs.swo  .lib.rs.swp  .main.rs.swo  .main.rs.swp  lib.rs  lib2.rs  lib_old.rs  main-old.rs  main.rs
prefilter/: __init__.py  aparams.yml  augment.nf  classification_train.py  cluster_params.yml  config.py  deepnog_config.yml  evaluate.py  evaluate.sh  evaluate_ranking_model.py  evaluate_w2v_model.py  first-pass-at-prot2vec.pt  models.py  msa_contrastive.py  name_to_class_code.json  params.yml  (+14 more)
(+423 files in other folders)
