[package]
name = "process_hits"
version = "0.1.0"
edition = "2021"
description = "A Python extension for processing hits using Rust"

[lib]
name = "process_hits"
crate-type = ["cdylib"]

[build-dependencies]
maturin = "0.12"

[dependencies]
numpy = "0.21.0"
pyo3 = "0.21.0"
hashbrown = "0.12"
rayon = "1.10.0"
anyhow = "1.0.86"
ndarray = "0.15.6"

[dev-dependencies]
pretty_assertions = "1.4.0"
predicates = "3.1.0"
assert_cmd = "2.0.14"
rand = "0.8.5"
tempfile = "3.10.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
