[package]
name = "my_rust_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_rust_module"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"

[dependencies.pyo3]
version = "0.15"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

# Additional dependencies, if any

[build-dependencies.pyo3]
version = "0.15"

